--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="module" src="/task-js-01.js"></script>
-    <script type="module" src="/task-js-02.js"></script>
-    <script type="module" src="/task-js-03.js"></script>
-    <script type="module" src="/task-js-04.js"></script> 
-    <script type="module" src="/task-js-05.js"></script>
-    <script type="module" src="/task-js-06.js"></script>
+    <script type="module" src="/js/task-js-01.js"></script>
+    <script type="module" src="/js/task-js-02.js"></script>
+    <script type="module" src="/js/task-js-03.js"></script>
+    <script type="module" src="/js/task-js-04.js"></script> 
+    <script type="module" src="/js/task-js-05.js"></script>
+    <script type="module" src="/js/task-js-06.js"></script>
 </body>
 </html>
