--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>JS-hw-01</title>
 </head>
 <body>
-    <script type="module" src="/js/task-js-01.js"></script>
-    <script type="module" src="/js/task-js-02.js"></script>
-    <script type="module" src="/js/task-js-03.js"></script>
-    <script type="module" src="/js/task-js-04.js"></script> 
-    <script type="module" src="/js/task-js-05.js"></script>
-    <script type="module" src="/js/task-js-06.js"></script>
+    <script type="module" src="./js/task-js-01.js"></script>
+    <script type="module" src="./js/task-js-02.js"></script>
+    <script type="module" src="./js/task-js-03.js"></script>
+    <script type="module" src="./js/task-js-04.js"></script> 
+    <script type="module" src="./js/task-js-05.js"></script>
+    <script type="module" src="./js/task-js-06.js"></script>
 </body>
 </html>
