--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JS-hw-01</title>
 </head>
 <body>
-    <script type="module" src="js/task-js-01.js"></script>
+    <script type="module" src="./js/task-js-01.js"></script>
     <script type="module" src="./js/task-js-02.js"></script>
     <script type="module" src="./js/task-js-03.js"></script>
     <script type="module" src="./js/task-js-04.js"></script> 
