--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>JS-hw-01</title>
-</head>
-<body>
+  </head>
+  <body>
     <script type="module" src="./js/task-js-01.js"></script>
     <script type="module" src="./js/task-js-02.js"></script>
     <script type="module" src="./js/task-js-03.js"></script>
-    <script type="module" src="./js/task-js-04.js"></script> 
+    <script type="module" src="./js/task-js-04.js"></script>
     <script type="module" src="./js/task-js-05.js"></script>
     <script type="module" src="./js/task-js-06.js"></script>
-</body>
+  </body>
 </html>
